force-app/main/default/objects/breg_Document__c/breg_Document__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>