force-app/main/default/objects/breg_Document__c/fields/breg_Annotation__c.field-meta.xml
<CustomField>
    <fullName>breg_Annotation__c</fullName>
    <description>Contains annotation JSON information. The field is not to be manipulated outside of PDF Editor</description>
    <label>Annotation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>