force-app/main/default/objects/breg_Document__c/fields/breg_Annual__c.field-meta.xml
<CustomField>
    <fullName>breg_Annual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Annual</label>
    <referenceTo>breg_Annual__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>