force-app/main/default/objects/breg_Document__c/fields/breg_Availability__c.field-meta.xml
<CustomField>
    <fullName>breg_Availability__c</fullName>
    <label>Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available Now</fullName>
            </value>
            <value>
                <fullName>Available by Mail or Pickup</fullName>
            </value>
            <value>
                <fullName>Available in 7 business days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>