force-app/main/default/objects/breg_Document__c/fields/breg_Available_To_Certify__c.field-meta.xml
<CustomField>
    <fullName>breg_Available_To_Certify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available To Certify</label>
    <type>Checkbox</type>
</CustomField>