force-app/main/default/objects/breg_Document__c/fields/breg_Certified_Copy_Robot_Message__c.field-meta.xml
<CustomField>
    <fullName>breg_Certified_Copy_Robot_Message__c</fullName>
    <label>Certified Copy Robot Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>