force-app/main/default/objects/breg_Document__c/fields/breg_Certified_Copy_Status__c.field-meta.xml
<CustomField>
    <fullName>breg_Certified_Copy_Status__c</fullName>
    <label>Certified Copy Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Repeat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>