force-app/main/default/objects/breg_Document__c/fields/breg_Delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>breg_Delivery_Email__c</fullName>
    <description>Aalta BREG-2787</description>
    <label>Delivery Email</label>
    <type>Email</type>
</CustomField>