force-app/main/default/objects/breg_Document__c/fields/breg_Description__c.field-meta.xml
<CustomField>
    <fullName>breg_Description__c</fullName>
    <formula>Name &amp; 
IF(
    OR(
        NOT(ISBLANK(TEXT(breg_Case__r.breg_Form_Code__c))),
        NOT(ISBLANK(breg_Annual__c)),
        NOT(ISBLANK(breg_TN_TM_SM__c))
    ),
    &quot; (&quot; &amp;
    IF(
        NOT(ISBLANK(TEXT(breg_Case__r.breg_Form_Code__c))),
        TEXT(breg_Case__r.breg_Form_Code__c),
        &quot;&quot;
    ) &amp;
    IF(
        AND(
            NOT(ISBLANK(TEXT(breg_Case__r.breg_Form_Code__c))),
            NOT(ISBLANK(breg_Annual__c))
        ),
        &quot;, &quot;,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(breg_Annual__c)),
        &quot;Annual Report&quot;,
        &quot;&quot;
    ) &amp;
    IF(
        AND(
            OR(
                NOT(ISBLANK(TEXT(breg_Case__r.breg_Form_Code__c))),
                NOT(ISBLANK(breg_Annual__c))
            ),
            NOT(ISBLANK(breg_TN_TM_SM__c))
        ),
        &quot;, &quot;,
        &quot;&quot;
    ) &amp;
    IF(
        NOT(ISBLANK(breg_TN_TM_SM__c)),
        TEXT(breg_TN_TM_SM__r.breg_Type__c),
        &quot;&quot;
    ) &amp;
    &quot;)&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>