force-app/main/default/objects/breg_Document__c/fields/breg_Docusign_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_Docusign_Document_Id__c</fullName>
    <externalId>true</externalId>
    <label>Docusign Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>