force-app/main/default/objects/breg_Document__c/fields/breg_Edit_Link__c.field-meta.xml
<CustomField>
    <fullName>breg_Edit_Link__c</fullName>
    <description>Opens PDF Editor. Requires PDF Editor to be installed on a local PC</description>
    <formula>HYPERLINK( &quot;pdfedit://edit?documentId=&quot;&amp; Id , &quot;Open PDF Editor&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annotate and Stamp in BREG PDF Editor</inlineHelpText>
    <label>Edit</label>
    <type>Text</type>
</CustomField>