force-app/main/default/objects/breg_Document__c/fields/breg_File_Number__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Number__c</fullName>
    <label>File Number</label>
    <length>22</length>
    <type>Text</type>
</CustomField>