force-app/main/default/objects/breg_Document__c/fields/breg_File_Storage_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Storage_Id__c</fullName>
    <label>File Storage ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>