force-app/main/default/objects/breg_Document__c/fields/breg_File_Storage_URL__c.field-meta.xml
<CustomField>
    <fullName>breg_File_Storage_URL__c</fullName>
    <label>File Storage URL</label>
    <type>Url</type>
</CustomField>