force-app/main/default/objects/breg_Document__c/fields/breg_Form_Configuration_Item__c.field-meta.xml
<CustomField>
    <fullName>breg_Form_Configuration_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Configuration Item</label>
    <referenceTo>breg_Form_Configuration_Item__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>