force-app/main/default/objects/breg_Document__c/fields/breg_Is_Certificate_Of_Good_Standing__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Certificate_Of_Good_Standing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Certificate Of Good Standing</label>
    <type>Checkbox</type>
</CustomField>