force-app/main/default/objects/breg_Document__c/fields/breg_Is_Certified__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Certified</label>
    <type>Checkbox</type>
</CustomField>