force-app/main/default/objects/breg_Document__c/fields/breg_Is_Initial_Filing__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Initial_Filing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-4692</description>
    <label>Is Initial Filing</label>
    <type>Checkbox</type>
</CustomField>