force-app/main/default/objects/breg_Document__c/fields/breg_Is_Irrelevant__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Irrelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-2748</description>
    <label>Is Irrelevant</label>
    <type>Checkbox</type>
</CustomField>