force-app/main/default/objects/breg_Document__c/fields/breg_Is_Public__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>