force-app/main/default/objects/breg_Document__c/fields/breg_Is_Template_Copy__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Template_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template Copy</label>
    <type>Checkbox</type>
</CustomField>