force-app/main/default/objects/breg_Document__c/fields/breg_Is_Uploaded_Attachment__c.field-meta.xml
<CustomField>
    <fullName>breg_Is_Uploaded_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aalta BREG-3651</description>
    <label>Is Uploaded Attachment</label>
    <type>Checkbox</type>
</CustomField>