force-app/main/default/objects/breg_Document__c/fields/breg_Price__c.field-meta.xml
<CustomField>
    <fullName>breg_Price__c</fullName>
    <label>Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>