force-app/main/default/objects/breg_Document__c/fields/breg_RDPMS_Adhoc_Request__c.field-meta.xml
<CustomField>
    <fullName>breg_RDPMS_Adhoc_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RDPMS Adhoc Request</label>
    <referenceTo>breg_RDPMS_Adhoc_Request__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>