force-app/main/default/objects/breg_Document__c/fields/breg_TaskId__c.field-meta.xml
<CustomField>
    <fullName>breg_TaskId__c</fullName>
    <description>Aalta BREG-299</description>
    <label>TaskId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>