force-app/main/default/objects/breg_Document__c/fields/breg_Template_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_Template_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Document</label>
    <referenceTo>breg_Document__c</referenceTo>
    <relationshipLabel>Documents to generate from the template</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>