force-app/main/default/objects/breg_Document__c/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-3543</description>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>breg_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>