force-app/main/default/objects/breg_Document__c/fields/breg_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
                <default>true</default>
                <label>Digital</label>
            </value>
            <value>
                <fullName>Printed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>