force-app/main/default/objects/breg_Document__c/fields/Docusign_Link__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Link__c</fullName>
    <formula>HYPERLINK( $Setup.breg_Docusign_Settings__c.Documents_Root_Link__c  + &apos;&amp;Id=&apos; +  breg_Docusign_Document_Id__c, Name ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign Link</label>
    <type>Text</type>
</CustomField>